examples/invalid/redeclarations/redeclarationFuction.vbr
track f () {
    |>("Bob") |
}

track f(){
    |> ("Esponja Patalones Cuadrados") |
}

moderato(){
    play f with () |
}